# g1-log-capture

./: .editorconfig  .gitattributes  .gitignore  README.md  pyproject.toml  requirements.txt
docs/: README.en.md  README.ko.md
src/gccapture/: analyzer.py  cli.py  models.py  parser.py  report.py  rules.py
tests/: test_smoke.py
