[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "g1gc-pause-advisor"
version = "0.1.0"
description = "G1GC Pause Time Analyzer & Advisor (rule-based)"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{name = "gccapture contributors"}]
dependencies = []

[project.scripts]
g1gc-advisor = "gccapture.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]


